# kimberley

./: .gitignore  configure.ac
src/: Makefile.am
src/kimberlize/: Makefile.am  abiword-execute  abiword-install  abiword-ubuntu-execute  abiword-ubuntu-install  axes  cdparanoia-install  dekimberlize  dermfind-execute  dermfind-install  experiments-script  gimp-execute  gimp-install  gnumeric-execute  gnumeric-install  imagejfind-execute  imagejfind-install  kimberlize  kpresenter-execute  kpresenter-install  make_floppy  no-execute  null-execute  pathfind-execute  pathfind-install  portforward  snapfind-fedora-execute  snapfind-fedora-install  snapfind-install  snapfind-ubuntu-execute  suite-execute  suite-install
src/mobile/: .gitignore  Makefile.am  common.c  common.h  dcm.xml  display_launcher.c  display_launcher.h  display_setup  gettimeofday.c  kcm.xml  mobile_launcher.c  mobile_launcher_server.c  rpc_mobile_launcher.mx  rpc_mobile_launcher.x.in
